--- a/package.json
+++ b/package.json
@@ -36,35 +36,36 @@
   },
   "devDependencies": {
     "@jest/globals": "^27.5.1",
-    "@logux/actions": "^0.2.1",
-    "@logux/client": "^0.14.6",
-    "@logux/core": "^0.7.2",
+    "@logux/actions": "^0.2.3",
+    "@logux/client": "^0.15.3",
+    "@logux/core": "^0.7.3",
     "@logux/eslint-config": "46.0.1",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "check-dts": "^0.6.6",
-    "eslint": "^8.8.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "@vue/test-utils": "^2.0.0",
+    "check-dts": "^0.6.7",
+    "eslint": "^8.16.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^40.1.0",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-unicorn": "^42.0.0",
     "jest": "^27.5.1",
-    "nano-staged": "^0.5.0",
+    "nano-staged": "^0.8.0",
     "nanodelay": "^2.0.2",
-    "nanostores": "^0.5.10",
-    "prettier": "^2.5.1",
+    "nanostores": "^0.5.12",
+    "prettier": "^2.6.2",
     "simple-git-hooks": "^2.7.0",
     "size-limit": "^7.0.8",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5",
-    "vue": "^3.2.30",
+    "ts-jest": "^28.0.3",
+    "typescript": "^4.6.4",
+    "vue": "^3.2.36",
     "vuex": "^4.0.2"
   },
   "simple-git-hooks": {
